OP-64 Fix button padding overlaps scroll buttons (#56)

--- a/app/assets/stylesheets/application/activities.scss
+++ b/app/assets/stylesheets/application/activities.scss
@@ -40,9 +40,11 @@
         }
       }
     }
-    .book-btn {
-      margin-top: 75px;
-      margin-left: 30px;
+    .book-section {
+      margin-left: 20px;
+      .book-btn {
+        margin-top: 75px;
+      }
     }
     .remaining-slots {
       margin-top: 10px;
